--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,7 @@
 browser=chrome
 
+webTable.url=https://web-table-2.cydeo.com/login
+web.table.username=Test
+web.table.password=Tester
 spartan.apiUrl=http://44.201.154.37:8000
 mock.apiUrl=https://my.api.mockaroo.com/mock_spartan.json
