--- a/configuration.properties
+++ b/configuration.properties
@@ -4,4 +4,9 @@ webTable.url=https://web-table-2.cydeo.com/login
 web.table.username=Test
 web.table.password=Tester
 spartan.apiUrl=http://44.201.154.37:8000
+spartan.webUrl = http://44.201.154.37:8000/spartans
 mock.apiUrl=https://my.api.mockaroo.com/mock_spartan.json
+
+spartan.DBUrl=jdbc:oracle:thin:@54.91.210.3:1521:XE
+spartan.DBusername=SP
+spartan.DBpassword=SP
