--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
             <artifactId>gson</artifactId>
             <version>2.8.9</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11 -->
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc11</artifactId>
+            <version>21.1.0.0</version>
+        </dependency>
+
 
     </dependencies>
 
